--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
       <div class="containers">
         <div class="container_img">
           <div class="container_circle">
-            <img src="" alt="" />
+            <img
+              class="img_perfil"
+              src="img/Imagen_Perfil.jpg"
+              alt="Imagen de perfil"
+            />
           </div>
         </div>
 
