--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mi hoja de vida</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
           <div class="container_circle">
             <img
               class="img_perfil"
-              src="img/Imagen_Perfil.jpg"
+              src="img/Imagen_Perfil.png"
               alt="Imagen de perfil"
             />
           </div>
