se mejoro el hover de la imagen de perfil

--- a/index.html
+++ b/index.html
@@ -197,20 +197,30 @@
               <p class="title_skill">Skill:</p>
               <div class="skills">
                 <div class="firstline">
-                  <div class="image"><img src="img/css_logo.png" alt="" /></div>
                   <div class="image">
-                    <img src="img/JS_logo.png" alt="" />
+                    <img class="img_logo_skill" src="img/css_logo.png" alt="" />
                   </div>
                   <div class="image">
-                    <img src="img/html_logo.png" alt="" />
+                    <img class="img_logo_skill" src="img/JS_logo.png" alt="" />
+                  </div>
+                  <div class="image">
+                    <img
+                      class="img_logo_skill"
+                      src="img/html_logo.png"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="secondline">
                   <div class="image">
-                    <img src="img/Python_logo.png" alt="" />
+                    <img
+                      class="img_logo_skill"
+                      src="img/Python_logo.png"
+                      alt=""
+                    />
                   </div>
                   <div class="image">
-                    <img src="img/c++_logo.png" alt="" />
+                    <img class="img_logo_skill" src="img/c++_logo.png" alt="" />
                   </div>
                 </div>
               </div>
